# llvm-lx

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: TargetLoopExtractor.h
lib/: CMakeLists.txt
lib/lx/: TargetLoopExtractor.cpp
test/: CMakeLists.txt  lit.cfg
test/srcs/: 0-nocmd.c  1-noloop.c  2-loop.c  3-func.c  4-nest.c  5-multi.c
tool/: CMakeLists.txt
tool/llvm-lx/: CMakeLists.txt  main.cpp
